# osu-ai-detector

./: .gitignore  LICENSE  README.md  RELEASE_MANIFEST.json  TECHNICAL_REPORT.md  THIRD_PARTY_NOTICES.md  environment-release.yml  install.ps1  prepare_offline_bundle.ps1  pyproject.toml  release-spec.json  requirements-model-agreement.txt  requirements-web.txt  start.ps1  upstream-model-manifest.json
scripts/: download_release_models.py
src/osu_ai_detector/: __init__.py  advanced_features.py  canonical.py  cli.py  content_model.py  deep_fusion.py  detector.py  features.py  forensic.py  fusion.py  interval_selection.py  parser.py  revision_registry.py  statistical.py  web.py  web_cli.py  web_ui.py  whitebox.py  whitebox_model.py  whitebox_protocol.py
tests/: test_advanced_features.py  test_canonical_content.py  test_cli.py  test_parser.py  test_release_smoke.py  test_whitebox_protocol.py
