[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "osu-ai-detector"
version = "1.0.0"
description = "Conservative, explainable Mapperatorinator fingerprint detector for osu! beatmaps"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "NettoAndTetto" }]
dependencies = []

[project.urls]
Homepage = "https://github.com/NettoAndTetto/osu-ai-detector"
Source = "https://github.com/NettoAndTetto/osu-ai-detector"
Report = "https://github.com/NettoAndTetto/osu-ai-detector/blob/v1.0.0/TECHNICAL_REPORT.md"

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "httpx>=0.27,<1",
  "fastapi>=0.115,<1",
  "python-multipart>=0.0.9",
]
web = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.30,<1",
  "python-multipart>=0.0.9",
]

[project.scripts]
osu-ai-detect = "osu_ai_detector.cli:main"
osu-ai-web = "osu_ai_detector.web_cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
osu_ai_detector = ["models/*.json"]


[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["."]
